Better permission user & bridge player http handler
